@@ -1,3 +1,11 @@
+Lights Off 46.rc
+==================
+
+* Updated translations
+* Appdata fixes (Sabri Ünal)
+* Exclude source SVG icons (Robert Roth)
+* Help fix describing menu button location (Rafael Fontenelle)
+
 Lights Off 46.alpha
 ==================
 
